--- a/MS-angular/app/css/home.css
+++ b/MS-angular/app/css/home.css
@@ -12,3 +12,16 @@
 	height: 34px; 
 }
 
+.audioDiv{
+	position: fixed;
+	bottom: 0;
+	left:0;
+	width:100%;
+	height: 48px; 
+	border-top: 1px solid #ccc;
+	box-sizing: content-box;
+}
+.audioDiv audio{
+	width: 100%;
+	height: 100%;
+}
