--- a/MS-angular/app/views/checkShareRequest.html
+++ b/MS-angular/app/views/checkShareRequest.html
@@ -15,13 +15,23 @@
 		<ul ng-show="shareRequests.length!=0" class="list-group">
 
 		    <li class="list-group-item" ng-repeat="shareRequest in shareRequests">
-		    	<p>歌曲名称：<span class='fr'>{{shareRequest.song.name}}</span></p>
-		    	<p>发起人：<span class='fr'>{{shareRequest.owner.name}}</span></p>
-		    	<p>接收人：<span class='fr'>{{shareRequest.target.name}}</span></p>
-		    	<p>类型：
-		    		<span class='fr' ng-show="shareRequest.owner.name==user.name">发起</span>
-		    		<span class='fr' ng-show="shareRequest.target.name==user.name">接收</span>
-		    	</p>
+          <div class="row">
+            <span class="col-xs-4">歌曲名称：</span>
+            <span class="col-xs-8 text-right">{{shareRequest.song.name}}</span>
+          </div>
+          <div class="row">
+            <span class="col-xs-4">发起人：</span>
+            <span class="col-xs-8 text-right">{{shareRequest.owner.name}}</span>
+          </div>
+          <div class="row">
+            <span class="col-xs-4">接收人：</span>
+            <span class="col-xs-8 text-right">{{shareRequest.target.name}}</span>
+          </div>
+          <div class="row">
+            <span class="col-xs-4">类型：</span>
+            <span class="col-xs-8 text-right" ng-show="shareRequest.owner.name==user.name">发起</span>
+            <span class="col-xs-8 text-right" ng-show="shareRequest.target.name==user.name">接收</span>
+          </div>
 		    	<div class="row" ng-show="shareRequest.target.name==user.name&&shareRequest.status==0">
 		    		<button class="btn btn-success col-xs-3 col-xs-offset-2" ng-click="replyShareRequest(shareRequest._id, 1)">同意请求</button>
 		    		<button class="btn btn-danger col-xs-3 col-xs-offset-2" ng-click="replyShareRequest(shareRequest._id, 2)">拒绝请求</button>
@@ -33,30 +43,30 @@
 	</div>
 </div>
 <!-- Modal -->
-  <music-modal id="shareModal">
+<music-modal id="shareModal">
     <modal-title>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="resetStatus()"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title" id="myModalLabel" ng-show="shareOperationStatus==0">选择好友</h4>
-      <h4 class="modal-title" id="myModalLabel" ng-show="shareOperationStatus==1">选择歌曲</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="resetStatus()"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel" ng-show="shareOperationStatus==0">选择好友</h4>
+        <h4 class="modal-title" id="myModalLabel" ng-show="shareOperationStatus==1">选择歌曲</h4>
     </modal-title>
     <modal-body>
-      <table class="table" ng-show="shareOperationStatus==0">
-        <thead>
-          <tr>
-            <th>姓名</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="friend in user.friends">
-            <th>{{friend.name}}</th>
-            <th>
-              <button type="button" class="btn btn-primary" ng-click="selectFriend(friend)">  
-                选择
-              </button>
-            </th>
-          </tr>
-        </tbody>
+        <table class="table" ng-show="shareOperationStatus==0">
+            <thead>
+              <tr>
+                <th>姓名</th>
+                <th>操作</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="friend in user.friends">
+                <th>{{friend.name}}</th>
+                <th>
+                  <button type="button" class="btn btn-primary" ng-click="selectFriend(friend)">  
+                    选择
+                  </button>
+                </th>
+              </tr>
+            </tbody>
       </table>
       <table class="table" ng-show="shareOperationStatus==1">
         <thead>
@@ -80,5 +90,5 @@
     <modal-footer>
       <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="resetStatus()">关闭</button>
     </modal-footer>
-  </music-modal>
+</music-modal>
 </div> 
