--- a/MS-angular/app/views/main.html
+++ b/MS-angular/app/views/main.html
@@ -7,8 +7,11 @@
 	<img src="http://www.cio.com.cn/source/attachments/image/20150810/20150810105138_30376.jpg" class="img-responsive" alt="欢迎使用音乐分享平台">
 
 	<div class="row" ng-show="!id">
-		<button class="btn btn-primary col-xs-6 col-xs-offset-3" ng-click="toLogin()">
+		<button class="btn btn-primary col-xs-3 col-xs-offset-2" ng-click="toLogin()">
 			<span>点此登录</span>
+		</button>
+		<button class="btn btn-success col-xs-3 col-xs-offset-2" ng-click="toApply()">
+			<span>注册</span>
 		</button>
 	</div>
 	<div class="row" ng-show="id">
