--- a/MS-angular/app/components/musicUploader/musicUploader.html
+++ b/MS-angular/app/components/musicUploader/musicUploader.html
@@ -1,5 +1,5 @@
 <div class="uploader row">
-	<input type="file" id="uploader" onchange="angular.element(this).scope().upload(event)" accept='.wav,.aif,.aiff,.flac,.alac,.aac,.ogg,.mp3'/>
+	<input type="file" id="uploader" onchange="angular.element(this).scope().upload(event)" accept='audio/mp3,audio/wav,audio/wma,audio/ogg'/>
 	<button class='btn btn-success col-xs-4 col-xs-offset-4' onclick="document.getElementById('uploader').click()">点击上传</button>
 </div>
 <span ng-show="isBeforeUploading">
