angular和vue版本首页修改

--- a/MS-angular/app/css/main.css
+++ b/MS-angular/app/css/main.css
@@ -1,4 +1,11 @@
-img{
-	padding-top: 20px;
-	margin-bottom: 20px;
+.logo{
+    width:200px;
+    margin:0 auto;
+}
+.version_logo{
+    width:60px;
+    margin:0 auto;
+}
+.version_text{
+    text-align: center;
 }
