--- a/MS-angular2-TS/src/app/css/main.css
+++ b/MS-angular2-TS/src/app/css/main.css
@@ -1,4 +1,14 @@
-img{
-	padding-top: 20px;
-	margin-bottom: 20px;
+.logo{
+    width:200px;
+    margin:0 auto;
+}
+.version_logo{
+    width:60px;
+    margin:0 auto;
+}
+.version_text{
+    text-align: center;
+}
+.marginTop20{
+	margin-top: 20px;
 }
