--- a/MS-angular2-TS/src/app/views/main.html
+++ b/MS-angular2-TS/src/app/views/main.html
@@ -3,14 +3,23 @@
 		<li *ngIf="!id">未登录</li>
 		<li *ngIf="id">已登录</li> 
 	</music-nav>
-
-	<img src="http://www.cio.com.cn/source/attachments/image/20150810/20150810105138_30376.jpg" class="img-responsive" alt="欢迎使用音乐分享平台">
-
-	<div class="row" *ngIf="!id">
-		<button class="btn btn-primary col-xs-6 col-xs-offset-3" (click)="toLogin()">
+		<img src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2550279230,467606093&fm=200&gp=0.jpg" class="img-responsive logo" alt="欢迎使用音乐分享平台">
+        <img src="https://www.angular.cn/favicon.ico" class="img-responsive version_logo">
+        <h1 class="version_text">ANGULAR2版本</h1>        
+        <p>这是一个音乐分享平台，实现音乐上传，在线播放，添加好友和给好友分享音乐的功能。</p>
+        <p>项目逻辑不复杂，功能不多，本人做这个项目仅供学习，严禁任何人用于商业。</p>
+        <p>希望能帮助大家学习框架API的使用，以及对不同框架的差别理解。</p>	
+    <div class="row" *ngIf="!id">
+		<button class="btn btn-primary col-xs-3 col-xs-offset-2" (click)="toLogin()">
 			<span>点此登录</span>
 		</button>
+        <button class="btn btn-success col-xs-3 col-xs-offset-2">
+            <span>注册</span>
+        </button>
 	</div>
+	<br>
+    <p class="marginTop20">作者：星空下的凡尘</p>
+    <p>邮箱：645566979@qq.com</p>
 	<div class="row" *ngIf="id">
 		<button class="btn btn-primary col-xs-6 col-xs-offset-3" (click)="toHome()">
 			<span>点此进入首页</span>
