react版本改为较为完善版本 目前剩下任务：angular2改为完善版本 之后考虑任务： 1、增加lodash式动态搜索功能 2、增加分页功能 3、增加vuex版本

--- a/MS-angular2-TS/src/app/views/main.html
+++ b/MS-angular2-TS/src/app/views/main.html
@@ -5,7 +5,8 @@
 	</music-nav>
 		<img src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2550279230,467606093&fm=200&gp=0.jpg" class="img-responsive logo" alt="欢迎使用音乐分享平台">
         <img src="https://www.angular.cn/favicon.ico" class="img-responsive version_logo">
-        <h1 class="version_text">ANGULAR2版本</h1>        
+        <h1 class="version_text">ANGULAR2版本</h1>
+        <p>电脑端使用时请用手机适配模式，目前平台只支持移动端</p>
         <p>这是一个音乐分享平台，实现音乐上传，在线播放，添加好友和给好友分享音乐的功能。</p>
         <p>项目逻辑不复杂，功能不多，本人做这个项目仅供学习，严禁任何人用于商业。</p>
         <p>希望能帮助大家学习框架API的使用，以及对不同框架的差别理解。</p>	
