--- a/MS-angular2-TS/src/app/views/main.html
+++ b/MS-angular2-TS/src/app/views/main.html
@@ -14,7 +14,7 @@
 		<button class="btn btn-primary col-xs-3 col-xs-offset-2" (click)="toLogin()">
 			<span>点此登录</span>
 		</button>
-        <button class="btn btn-success col-xs-3 col-xs-offset-2">
+        <button class="btn btn-success col-xs-3 col-xs-offset-2" (click)="toApply()">
             <span>注册</span>
         </button>
 	</div>
