--- a/MS-angular2-TS/src/app/css/home.css
+++ b/MS-angular2-TS/src/app/css/home.css
@@ -11,4 +11,15 @@
 	line-height: 34px; 
 	height: 34px; 
 }
-
+.audioDiv{
+    position: fixed;
+    bottom: 0;
+    left:0;
+    width:100%;
+    height: 48px; 
+    box-sizing: content-box;
+}
+.audioDiv audio{
+    width: 100%;
+    height: 100%;
+}
