--- a/MS-angular2-TS/src/app/views/home.html
+++ b/MS-angular2-TS/src/app/views/home.html
@@ -46,5 +46,8 @@
 	<div *ngIf="tab=='UploadTab'" class="uploadPage">
 		<music-uploader></music-uploader>
 	</div>
-
+    <div class="audioDiv" *ngIf="musicFlag">
+        <audio controls autoplay [src]="musicUrl">
+        </audio>        
+    </div>
 </div>
