适配四个版本的电脑端

--- a/MS-angular/app/views/main.html
+++ b/MS-angular/app/views/main.html
@@ -7,8 +7,8 @@
     <img src="http://www.angularjs.net.cn/Application/Home/View/Public/img/favicon.ico" class="img-responsive version_logo">
     <h1 class="version_text">ANGULAR版本</h1>        
   
-    <p>电脑端使用时请用手机适配模式，目前平台只支持移动端</p>
     <p>这是一个音乐分享平台，实现音乐上传，在线播放，添加好友和给好友分享音乐的功能。</p>
+    <p>响应式设计同时支持移动端和电脑端，上传音乐IOS端请使用icoud drive上传</p>
     <p>项目逻辑不复杂，功能不多，本人做这个项目仅供学习，严禁任何人用于商业。</p>
     <p>希望能帮助大家学习框架API的使用，以及对不同框架的差别理解。</p>
 
