--- a/MS-angular/app/components/musicNav/musicNav.html
+++ b/MS-angular/app/components/musicNav/musicNav.html
@@ -1,17 +1,19 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-			<span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	    </button>
-	    <span ng-show="!showName" class="navbar-brand">音乐分享平台</span>
-	    <div ng-show="showName" class="name">
-	    	<span>{{username}}</span>，欢迎回来！
-	    </div>
-  	</div>
-  	<div class="collapse navbar-collapse" id="navbar">
-  		<ul class="nav navbar-nav" ng-transclude></ul>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+	    <div class="navbar-header">
+		    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		    </button>
+		    <span ng-show="!showName" class="navbar-brand">音乐分享平台</span>
+		    <div ng-show="showName" class="name">
+		    	<span>{{username}}</span>，欢迎回来！
+		    </div>
+	  	</div>
+	  	<div class="collapse navbar-collapse" id="navbar">
+	  		<ul class="nav navbar-nav" ng-transclude></ul>
+	  	</div>
   	</div>
 </nav>
