--- a/MS-angular2-TS/src/styles.css
+++ b/MS-angular2-TS/src/styles.css
@@ -6,8 +6,33 @@
 		
 body { padding-top: 50px; }
 
-.navbar-nav li{
-	line-height: 50px;
-	height: 50px;
-	margin:0 5%;
+.navbar-nav {
+	color:white;
+}
+@media (max-width: 767px){
+	.navbar-nav > li {
+		font-size: 20px;
+		line-height: 50px;
+		height: 50px;
+		margin:0 5%;
+	}	
+}
+
+@media (min-width: 768px) {
+	.navbar-nav{
+		float: right;
+	}
+	.navbar-header{
+		min-width: 200px;
+	}
+  	.navbar-nav > li {
+  		cursor : pointer;
+	  	margin-right: 20px; 
+	    padding-top: 15px;
+	    padding-bottom: 15px;
+	}
+}
+.panel{
+	max-width: 400px;
+	margin:0 auto;
 }
