--- a/MS-react-ES6/app/components/MusicNav/MusicNav.css
+++ b/MS-react-ES6/app/components/MusicNav/MusicNav.css
@@ -10,10 +10,27 @@
 }
 .navbar-nav {
     color:white;
-    font-size: 20px;
 }
-.navbar-nav li{
-    line-height: 50px;
-    height: 50px;
-    margin:0 5%;
+@media (max-width: 767px){
+    .navbar-nav > li {
+        font-size: 20px;
+        line-height: 50px;
+        height: 50px;
+        margin:0 5%;
+    }   
+}
+
+@media (min-width: 768px) {
+    .navbar-nav{
+        float: right;
+    }
+    .navbar-header{
+        min-width: 200px;
+    }
+    .navbar-nav > li {
+        cursor : pointer;
+        margin-right: 20px; 
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
