--- a/MS-angular/app/css/style.css
+++ b/MS-angular/app/css/style.css
@@ -2,8 +2,13 @@
 .fr{float:right; }
 .clear{zoom:1;}
 .clear:after{content:""; display: table; clear:both; }
-
+/*pannel for PC*/
 .panel{
 	max-width: 400px;
 	margin:0 auto;
+}
+/*loading*/
+canvas{
+	margin:0 auto;
+	display: block;
 }
