angular版本添加全量歌曲动态搜索及添加 angular版本修复uploader的一点bug 后台对应接口增加及修改

--- a/MS-angular/app/css/home.css
+++ b/MS-angular/app/css/home.css
@@ -2,12 +2,20 @@
 	padding-top: 20px; 
 	margin-bottom: 10px; 
 }
+.nav>li>a {
+	padding-left: 14px!important;
+	padding-right: 14px!important;
+}
 
 .songList .list-group-item span{
 	line-height: 34px; 
 	height: 34px; 
 }
 .friendList .list-group-item span{
+	line-height: 34px; 
+	height: 34px; 
+}
+.searchList .list-group-item span{
 	line-height: 34px; 
 	height: 34px; 
 }
