vue版本增加动态搜索和加载动画 angular一些小bug的修正 删除vue和angular俩个版本的searchFriend接口 vue版本上传样式修复

--- a/MS-vue-ES6/app/style.css
+++ b/MS-vue-ES6/app/style.css
@@ -4,7 +4,13 @@
 .clear:after{content:""; display: table; clear:both; }
 
 body { padding-top: 50px; }  /*navbar use*/
+/*pannel for PC*/
 .panel{
 	max-width: 400px;
 	margin:0 auto;
+}
+/*loading*/
+canvas{
+	margin:0 auto;
+	display: block;
 }
