react版本增加动态搜索和loading画面 vue版本样式微调 react版本上传样式微调 1.0整体版本发布准备收尾 现阶段只剩下angular2版本的动态搜索和loading画面

--- a/MS-react-ES6/app/css/home.css
+++ b/MS-react-ES6/app/css/home.css
@@ -11,6 +11,14 @@
 	line-height: 34px; 
 	height: 34px; 
 }
+.nav>li>a {
+    padding-left: 14px!important;
+    padding-right: 14px!important;
+}
+.searchList .list-group-item span{
+    line-height: 34px; 
+    height: 34px; 
+}
 .audioDiv{
     position: fixed;
     bottom: 0;
