--- a/MS-react-ES6/app/css/style.css
+++ b/MS-react-ES6/app/css/style.css
@@ -4,7 +4,13 @@
 .clear:after{content:""; display: table; clear:both; }
 
 body { padding-top: 50px; }  /*navbar use*/
+/*pannel for PC*/
 .panel{
 	max-width: 400px;
 	margin:0 auto;
+}
+/*loading*/
+canvas{
+	margin:0 auto;
+	display: block;
 }
